tools/tests/errors/surf_arity_01.experr
function takes 1 positional argument(s) but 2 were given
